<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_password">Password</string>
    <string name="room_name">Room\'s name</string>
    <string name="room_number">Room\'s number</string>
    <string name="room_capacity">Capacity</string>
    <string name="floor_number">Floor</string>
    <string name="display_availability">Display</string>
    <string name="speakers_availability">Speakers</string>
    <string name="update_button_text">Update &amp; Return</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="delete_room_button">Delete room</string>

    <string name="choose_start_time">Start time</string>
    <string name="choose_finish_time">Finish time</string>
    <string name="select_data">select</string>
    <string name="event_name">Event\'s name</string>
    <string name="event_participants">Participants</string>
    <string name="event_room">Room</string>


    <string name="hint_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>