<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/separate_room_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.add_room.AddRoomFragment">

        <!-- TODO: Update blank fragment layout -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/separateRoomToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal_200"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="16dp">


                <Button
                    android:id="@+id/update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/update_button_text" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/separate_room_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separateRoomToolBar"
            app:srcCompat="@drawable/______________2023_07_05_171010"
            tools:src="@drawable/______________2023_07_05_171010"
            tools:srcCompat="@drawable/______________2023_07_05_171010" />

        <EditText
            android:id="@+id/room_number_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separate_room_image" />

        <EditText
            android:id="@+id/room_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_number_field" />

        <TextView
            android:id="@+id/room_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="95dp"
            android:text="@string/room_number"
            app:layout_constraintEnd_toStartOf="@+id/room_number_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separate_room_image" />

        <TextView
            android:id="@+id/room_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="108dp"
            android:text="@string/room_name"
            app:layout_constraintEnd_toStartOf="@+id/room_name_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_number_textview" />

        <EditText
            android:id="@+id/room_capacity_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_name_field" />

        <TextView
            android:id="@+id/room_capacity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/room_capacity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_name_textview" />

        <EditText
            android:id="@+id/room_level_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/room_level_textview"
            app:layout_constraintTop_toBottomOf="@+id/room_capacity_field" />

        <TextView
            android:id="@+id/room_level_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/floor_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_capacity_textview" />

        <TextView
            android:id="@+id/speakers_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="45dp"
            android:text="@string/speakers_availability"
            app:layout_constraintBottom_toTopOf="@+id/add_room_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="7dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/dashed_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_level_field" />

        <TextView
            android:id="@+id/display_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="23dp"
            android:text="@string/display_availability"
            app:layout_constraintEnd_toStartOf="@+id/display_status"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <Button
            android:id="@+id/delete_room_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="46dp"
            android:text="@string/delete_room_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speakers_status"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/speakers_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/speakers_textview"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/display_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>